testsuite/tests/partial-sigs/should_fail/T12732.hs
module T12732 where

(a ... b) xs
  | a == x
  , (l, _:r) <- break (== x) xs
  = l ++ [x]
